--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,7 @@ commands:
     description: Request a duel
     usage: /duel <username>
     permission:
+  reloadlua:
+    description: Reload lua
+    usage: /reloadlua
+    permission:
