paranormal sighting in the code quelled... for now

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,9 @@ commands:
     description: Configure your block battles deck
     usage: /blockdeck
     permission:
+  rules:
+    description: Get rules
+    usage: /rules
+    permission:
+
+
